--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>This site showcases my open source work and personal projects hosted on GitHub.</p>
-      <img src="https://www.google.com/imgres?q=github&imgurl=https%3A%2F%2Fmiro.medium.com%2Fv2%2Fresize%3Afit%3A1200%2F0*W_ZzRNmblhBgm_u8.jpg&imgrefurl=https%3A%2F%2Frohit-shirke.medium.com%2Ftop-github-features-you-should-be-knowing-310bd7a84581&docid=mP4IJ3lwsvNaWM&tbnid=odAIL8MH2-GwGM&vet=12ahUKEwi6icmDz8CNAxUnSGcHHc6jHPwQM3oECBwQAA..i&w=1200&h=675&hcb=2&ved=2ahUKEwi6icmDz8CNAxUnSGcHHc6jHPwQM3oECBwQAA" />
+      <img src="https://miro.medium.com/v2/resize:fit:1200/0*W_ZzRNmblhBgm_u8.jpg" />
     </section>
 
     <section id="projects">
