--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>This site showcases my open source work and personal projects hosted on GitHub.</p>
-      <img src="https://miro.medium.com/v2/resize:fit:1200/0*W_ZzRNmblhBgm_u8.jpg" />
+      <img src="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
     </section>
 
     <section id="projects">
