--- a/index.html
+++ b/index.html
@@ -2,117 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My GitHub SEO Page</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="This is a sample GitHub Pages site optimized for SEO." />
-  <meta name="keywords" content="GitHub Pages, SEO, HTML, CSS, Open Source" />
-  <meta name="author" content="Your Name" />
-  <link rel="canonical" href="https://yourusername.github.io/" />
-
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="My GitHub SEO Page" />
-  <meta property="og:description" content="A simple website hosted on GitHub Pages with SEO best practices." />
-  <meta property="og:url" content="https://yourusername.github.io/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="My GitHub SEO Page" />
-  <meta name="twitter:description" content="A simple GitHub Pages website optimized for SEO." />
-  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My GitHub Website</title>
   <style>
     body {
-      font-family: system-ui, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background-color: #fff;
-      color: #333;
-    }
-
-    header, footer {
-      background: #f5f5f5;
-      padding: 1em;
+      font-family: Arial, sans-serif;
       text-align: center;
+      padding: 50px;
     }
-
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    nav ul li {
-      display: inline-block;
-      margin: 0 1em;
-    }
-
-    a {
-      text-decoration: none;
-      color: #0077cc;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2em;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    h1, h2 {
-      color: #222;
-    }
-
-    img.responsive {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin-top: 1em;
+    h1 {
+      color: #007acc;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Welcome to My GitHub Pages Site</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>This site showcases my open source work and personal projects hosted on GitHub.</p>
-      <img src="https://via.placeholder.com/1200x630.png?text=GitHub+SEO+Page" />
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
-        <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
-      </ul>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>You can reach me via <a href="mailto:your@email.com">email</a>.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
+  <h1>Welcome to My GitHub Website</h1>
+  <p>This site is hosted with GitHub Pages!</p>
 </body>
 </html>
