--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   
 
   <!-- Image Tag -->
-  <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*dDNpLKu_oTLzStsDTnkJ-g.png" alt="Website Illustration" />
+  <img src="" alt="Website Illustration" />
 
 </body>
 </html>
+
