--- a/index.html
+++ b/index.html
@@ -4,30 +4,110 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My GitHub Website</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      padding: 20px;
     }
+
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      border-radius: 20px;
+      padding: 40px;
+      max-width: 900px;
+      color: white;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
     h1 {
-      color: #007acc;
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      background: linear-gradient(to right, #00f5ff, #00ff94);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: slideDown 1s ease-out;
     }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.7;
+      margin-bottom: 25px;
+    }
+
     img {
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      border-radius: 15px;
       margin-top: 20px;
+      transition: transform 0.4s ease;
     }
+
+    img:hover {
+      transform: scale(1.05);
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+      background: linear-gradient(45deg, #00f5ff, #00ff94);
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
   </style>
 </head>
-<body>
-  <h1>Welcome to My GitHub Website</h1>
-  <p>GitHub is a web-based platform used primarily for version control and collaborative software development. It allows developers to host, manage, and track changes to their code using Git, a powerful version control system. GitHub makes it easy for individuals and teams to work together on projects, share code, and contribute to open-source software. With features like pull requests, issue tracking, code reviews, and integrated CI/CD tools, GitHub has become an essential hub for modern software development. In addition to supporting developers, it also serves as a portfolio platform where users can showcase their work to potential employers or collaborators.</p>
-  
 
-  <!-- Image Tag -->
-  <img src="" alt="Website Illustration" />
+<body>
+
+  <div class="card">
+    <h1>🚀 Welcome to My GitHub Website</h1>
+
+    <p>
+      GitHub is a web-based platform used primarily for version control and collaborative software development.
+      It allows developers to host, manage, and track changes to their code using Git.
+      With features like pull requests, issue tracking, and CI/CD tools, GitHub has become an essential hub for modern development.
+    </p>
+
+    <a href="https://github.com" target="_blank" class="btn">Visit GitHub</a>
+
+    <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*dDNpLKu_oTLzStsDTnkJ-g.png" alt="Website Illustration" />
+
+  </div>
 
 </body>
 </html>
-
